# boidbox

./: CMakeLists.txt  boid.c  boid.h  led_panel.c  led_panel.h  main.c  streak.c  streak.h  test.c  test.h  utils.c  utils.h  v2.c  v2.h
src/: boid.c  led_panel.h  streak.c  utils.c  v2.c  v2.h
